# qt-project

./: .gitignore  CMakeLists.txt  Main.qml  main.cpp
.claude/: settings.local.json
js/: EventRecurrenceLogic.js
network/: NetworkClient.cpp  NetworkClient.h
sql/: schema.sql
views/: ActivityDispatchView.qml  ActivityManagementView.qml  ActivitySchedulerDialog.qml  AddActivityDialog.qml  MemberManagementView.qml  ScheduleUploadView.qml
